--- a/prototype/frontend/index.html
+++ b/prototype/frontend/index.html
@@ -11,4 +11,5 @@
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
+  <div class="ring-red-600 ring-blue-600 border-red-500 border-blue-500 bg-blue-400 bg-red-400 invisible"></div>
 </html>
