--- a/prototype/frontend/index.html
+++ b/prototype/frontend/index.html
@@ -11,5 +11,5 @@
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
-  <div class="ring-red-600 ring-blue-600 ring-gray-600 border-red-500 border-blue-500 bg-blue-400 bg-red-400 border-gray-500 bg-gray-400 invisible"></div>
+  <div class="ring-red-600 ring-blue-600 ring-gray-600 border-red-500 border-blue-500 bg-blue-400 bg-red-400 border-gray-500 bg-gray-400 bg-blue-900 bg-red-900 bg-gray-900 invisible"></div>
 </html>
