MOBA-139 epic details

--- a/prototype/frontend/index.html
+++ b/prototype/frontend/index.html
@@ -25,10 +25,16 @@
     }
 
     .router-link-active {
-      background-color: gray;
+      background-color: #ccc
     }
     .router-link-exact-active div{
-      background-color: gray;
+      background-color: #ccc;
+    }
+    .dark .router-link-active {
+      background-color: gray !important;
+    }
+    .dark .router-link-exact-active div{
+      background-color: gray !important;
     }
 
     .v-enter-active,
