--- a/prototype/frontend/index.html
+++ b/prototype/frontend/index.html
@@ -1,76 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Prototype</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
-  </body>
-  <style>
-    .ripple {
-      background-position: center;
-      transition: background 0.4s;
-    }
-    .ripple:hover {
-      background: rgb(200, 200, 200, 0.1) radial-gradient(circle, transparent 1%, rgb(200, 200, 200, 0.1) 1%) center/15000%;
-    }
-    .ripple:active {
-      background-size: 100%;
-      transition: background 0s;
-    }
+	<head>
+		<meta charset="UTF-8" />
+		<link rel="icon" href="/favicon.ico" />
+		<link
+			href="https://fonts.googleapis.com/icon?family=Material+Icons"
+			rel="stylesheet" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Prototype</title>
+	</head>
+	<body>
+		<div id="app"></div>
+		<script type="module" src="/src/main.ts"></script>
+	</body>
+	<style>
+		.ripple {
+			background-position: center;
+			transition: background 0.4s;
+		}
+		.ripple:hover {
+			background: rgb(200, 200, 200, 0.1)
+				radial-gradient(circle, transparent 1%, rgb(200, 200, 200, 0.1) 1%)
+				center/15000%;
+		}
+		.ripple:active {
+			background-size: 100%;
+			transition: background 0s;
+		}
 
-    .router-link-active {
-      background-color: #ccc
-    }
-    .router-link-exact-active div{
-      background-color: #ccc;
-    }
-    .dark .router-link-active {
-      background-color: gray !important;
-    }
-    .dark .router-link-exact-active div{
-      background-color: gray !important;
-    }
+		.router-link-active {
+			background-color: #ccc;
+		}
+		.router-link-exact-active div {
+			background-color: #ccc;
+		}
+		.dark .router-link-active {
+			background-color: gray !important;
+		}
+		.dark .router-link-exact-active div {
+			background-color: gray !important;
+		}
 
-    .v-enter-active,
-    .v-leave-active {
-      transition: opacity 0.1s ease-out;
-    }
+		.v-enter-active,
+		.v-leave-active {
+			transition: opacity 0.1s ease-out;
+		}
 
-    .v-enter-from,
-    .v-leave-to {
-      opacity: 0;
-    }
+		.v-enter-from,
+		.v-leave-to {
+			opacity: 0;
+		}
 
-    /* TODO remove this */
-    .material-icons {
-      font-family: 'Material Icons';
-      font-weight: normal;
-      font-style: normal;
-      font-size: 24px;  /* Preferred icon size */
-      display: inline-block;
-      line-height: 1;
-      text-transform: none;
-      letter-spacing: normal;
-      word-wrap: normal;
-      white-space: nowrap;
-      direction: ltr;
+		/* TODO remove this */
+		.material-icons {
+			font-family: 'Material Icons';
+			font-weight: normal;
+			font-style: normal;
+			font-size: 24px; /* Preferred icon size */
+			display: inline-block;
+			line-height: 1;
+			text-transform: none;
+			letter-spacing: normal;
+			word-wrap: normal;
+			white-space: nowrap;
+			direction: ltr;
 
-      /* Support for all WebKit browsers. */
-      -webkit-font-smoothing: antialiased;
-      /* Support for Safari and Chrome. */
-      text-rendering: optimizeLegibility;
+			/* Support for all WebKit browsers. */
+			-webkit-font-smoothing: antialiased;
+			/* Support for Safari and Chrome. */
+			text-rendering: optimizeLegibility;
 
-      /* Support for Firefox. */
-      -moz-osx-font-smoothing: grayscale;
+			/* Support for Firefox. */
+			-moz-osx-font-smoothing: grayscale;
 
-      /* Support for IE. */
-      font-feature-settings: 'liga';
-    }
-  </style>
+			/* Support for IE. */
+			font-feature-settings: 'liga';
+		}
+	</style>
 </html>
